syntax = "proto3";

package management.v1;

// BooleanFlag represent a command to set some boolean property to true,
// to false, or avoid changing that property.
enum BooleanFlag {
  // Do not change boolean property. Default value.
  BOOLEAN_FLAG_UNSPECIFIED = 0;
  // True.
  BOOLEAN_FLAG_TRUE = 1;
  // False.
  BOOLEAN_FLAG_FALSE = 2;
}
